fixed collapse plus icon issue

--- a/public/style.css
+++ b/public/style.css
@@ -1885,7 +1885,7 @@ button:focus{
         line-height: 25px;
     }
     .fqatabbing_container .panel-default>.panel-heading a:after{
-        right: -34px;
+        right: -20px;
     }
     .privacy_policycontainer p{
         font-size: 25px;
