--- a/src/components/topnav/Topnav.css
+++ b/src/components/topnav/Topnav.css
@@ -88,7 +88,7 @@
     }
    
 }
-@media (min-width: 768px) and (max-width:1022px) {
+@media (min-width: 768px) and (max-width:799px) {
     .sidebar_newcollapse .navbar-collapse{
         overflow: hidden;
         top: 60px;
@@ -119,7 +119,7 @@
         margin: 22px 0px 0px 0px;
     }
   }
- 
+
 @media screen and (max-width: 320px) {
     img.dashboardheader{
         width: 30px;
